--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
         "title": "Hello World"
       },
       {
-				"command": "smcverFunctions.reveal",
-				"title": "SMcVer Function: Reveal"
-			},
-			{
-				"command": "smcverFunctions.changeTitle",
-				"title": "SMcVer Function: Change Title"
-			},
+        "command": "smcverFunctions.reveal",
+        "title": "SMcVer Function: Reveal"
+      },
+      {
+        "command": "smcverFunctions.changeTitle",
+        "title": "SMcVer Function: Change Title"
+      },
       {
         "command": "Update-TreeView",
         "category": "Custom",
         "title": "Actively updates the tree view",
         "icon": "$(extensions-refresh)"
-    }
+      }
     ],
     "viewsContainers": {
       "activitybar": [
@@ -55,14 +55,13 @@
     },
     "menus": {
       "view/title": [
-          {
-              "command": "Update-TreeView",
-              "when": "view == customView",
-              "group": "navigation"
-          }
+        {
+          "command": "Update-TreeView",
+          "when": "view == customView",
+          "group": "navigation"
+        }
       ]
-  }
-    
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
@@ -76,19 +75,22 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
     "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.1",
-    "@vscode/test-electron": "^2.3.2"
+    "webpack-cli": "^5.1.1"
+  },
+  "dependencies": {
+    "python-shell": "^5.0.0"
   }
 }
