--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "SMcVer GUI",
   "description": "Help developers use SMcVer",
   "version": "0.0.1",
+  "publisher": "Dor Shitrit",
+  "icon": "images/logo.png",
   "engines": {
     "vscode": "^1.78.0"
   },
